--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -25,3 +25,18 @@
 .navbar-text {
   margin-left: 15px;
 }
+.image-upload > input
+{
+    display: none;
+}
+.cameraButton {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 70px;
+}
+#btn-camera-upload {
+    display:block;
+    width:100%;
+}
