--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -40,3 +40,9 @@
     display:block;
     width:100%;
 }
+#map{
+    overflow:hidden;
+    padding-bottom:56.25%;
+    position:relative;
+    height:0;
+}
