--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -18,6 +18,7 @@ $fa-font-path: "../bower_components/font-awesome/fonts";
 /* inject:scss */
 @import 'admin/admin';
 @import 'createOffering/createOffering';
+@import 'detailOffer/detailOffer';
 @import 'main/main';
 @import 'offer/create/create';
 @import 'offer/offer';
