--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -46,3 +46,10 @@
     position:relative;
     height:0;
 }
+.offerlist a{
+    display: block;
+    color: #000;
+    padding: 8px 0 8px 16px;
+    text-decoration: none;
+    
+}
