--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -17,6 +17,7 @@ $fa-font-path: "../bower_components/font-awesome/fonts";
 // Component styles are injected through grunt
 /* inject:scss */
 @import 'admin/admin';
+@import 'createComment/createComment';
 @import 'createOffering/createOffering';
 @import 'detailOffer/detailOffer';
 @import 'main/main';
