--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -40,6 +40,14 @@
     background: #d3d3d3 ;
     border-radius: 0px;
 }
+#btn-login {
+    display:block;
+    width:100%;
+    height:70px;
+    background: #d3d3d3 ;
+    border-radius: 0px;
+    color:#000;
+}
 #map{
     overflow:hidden;
     padding-bottom:56.25%;
@@ -57,20 +65,4 @@ li a:hover{
     text-decoration: none;
 
 }
-/*.offer-link a:link{
-    text-decoration: none;
-}
-.offer-link a:hover{
-    text-decoration:none;
-}*/
 
-/*.offerPicture{
-    max-width:100%;
-}*/
-/*.offerlist a{
-    display: block;
-    color: #000;
-    padding: 8px 0 8px 16px;
-    text-decoration: none;
-    
-}*/
