--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -19,8 +19,11 @@ $fa-font-path: "../bower_components/font-awesome/fonts";
 @import 'admin/admin';
 @import 'createComment/createComment';
 @import 'createOffering/createOffering';
+@import 'deleteOffer/deleteOffer';
 @import 'detailOffer/detailOffer';
+@import 'editOffer/editOffer';
 @import 'main/main';
+@import 'sellOffer/sellOffer';
 @import '../components/footer/footer';
 @import '../components/modal/modal';
 /* endinject */
