Startseite weiter angepasst

--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -65,4 +65,16 @@ li a:hover{
     text-decoration: none;
 
 }
+li a:active{
+    color: #000;
+    text-decoration: none;
+}
 
+li a:visited{
+    color: #000;
+    text-decoration: none;
+
+}
+li h4{
+    margin-top: 0px;
+}
