added myOffers view

--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -23,6 +23,7 @@ $fa-font-path: "../bower_components/font-awesome/fonts";
 @import 'detailOffer/detailOffer';
 @import 'editOffer/editOffer';
 @import 'main/main';
+@import 'myOffers/myOffers';
 @import 'sellOffer/sellOffer';
 @import '../components/footer/footer';
 @import '../components/modal/modal';
