offer service update function, corrected edit, sell and delete functions

--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -18,7 +18,7 @@ $fa-font-path: "../bower_components/font-awesome/fonts";
 /* inject:scss */
 @import 'admin/admin';
 @import 'createOffering/createOffering';
-@import 'editOffer/detailOffer/detailOffer';
+@import 'detailOffer/detailOffer';
 @import 'editOffer/editOffer';
 @import 'main/main';
 @import 'myOffers/myOffers';
