--- a/client/app/detailOffer/detailOffer.scss
+++ b/client/app/detailOffer/detailOffer.scss
@@ -15,10 +15,10 @@
 }
 
 h4 {
-    margin-top: 0px;
+    margin-top: 0;
 }
 
-button {
-    margin-top: 10px !important;
-    margin-bottom: 10px !important;
+.btn.btn-lg {
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
