--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -35,3 +35,8 @@ $fa-font-path: "../bower_components/font-awesome/fonts";
     font-size: 14px;
 
 }
+
+.img-thumbnail {
+
+    margin-bottom: 15px;
+}
