--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -4,6 +4,12 @@ $fa-font-path: "../bower_components/font-awesome/fonts";
 @import '../bower_components/font-awesome/scss/font-awesome';
 
 /**
+* Global variables
+*/
+$gm-color-blue: #00a6ff;
+$gm-color-blue2: #0091DE;
+
+/**
  * App-wide Styles
  */
 
@@ -13,6 +19,20 @@ $fa-font-path: "../bower_components/font-awesome/fonts";
   color: #000;
   padding: 0.2em 0;
 }
+
+#logo {
+    height:25px;
+}
+
+.btn-primary {
+    background-color: $gm-color-blue;
+    border-color: $gm-color-blue2;
+    &:hover {
+        background-color: $gm-color-blue2;
+    }
+}
+
+
 
 // Component styles are injected through grunt
 /* inject:scss */
