--- a/client/app/detailOffer/detailOffer.scss
+++ b/client/app/detailOffer/detailOffer.scss
@@ -22,3 +22,10 @@ h4 {
     margin-top: 10px;
     margin-bottom: 10px;
 }
+
+.comment-creator {
+    background-color: #FFFAD7;
+}
+.comment-self {
+    background-color: #E9F7FF;
+}
