--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -53,10 +53,17 @@ $gm-color-blue2: #0091DE;
 
 .btn-lg, .btn-group-lg > .btn {
     font-size: 14px;
-
 }
 
 .img-thumbnail {
 
     margin-bottom: 15px;
+}
+
+#btn-login, #btn-camera-upload {
+   margin:0px;
+}
+
+.jumbotron > h1 {
+    color: $gm-color-blue;
 }
